Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-11585

recovery-double-scale test_pairwise_fail: Oops: BUG: unable to handle kernel NULL pointer dereference: qsd_lqe_read+0x284/0x570 [lquota]

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.13.0
    • Lustre 2.12.0
    • None
    • 3
    • 9223372036854775807

      [ 1720.701775] LustreError: 11558:0:(qsd_entry.c:243:qsd_refresh_usage()) $$$ failed to read disk usage, rc:-3 qsd:lustre-OST0003 qtype:usr id:60000 enforced:1 granted: 0 pending:0 waiting:0 req:0 usage: 0 qunit:0 qtune:0 edquot:0 default:no
      [ 1720.701784] Lustre: 11558:0:(qsd_reint.c:355:qsd_reconciliation()) lustre-OST0003: failed to locate lqe. [0x200000006:0x20000:0x0], -3
      [ 1720.701786] Lustre: 11558:0:(qsd_reint.c:355:qsd_reconciliation()) Skipped 1 previous similar message
      [ 1720.701797] Lustre: 11558:0:(qsd_reint.c:529:qsd_reint_main()) lustre-OST0003: reconciliation for [0x200000005:0x1006:0x0] failed with -3
      [ 1720.701798] Lustre: 11558:0:(qsd_reint.c:529:qsd_reint_main()) Skipped 1 previous similar message
      [ 1720.706241] Lustre: lustre-OST0003: deleting orphan objects from 0x300000400:194 to 0x300000400:225
      [ 1727.019288] LustreError: 10625:0:(qsd_entry.c:243:qsd_refresh_usage()) $$$ failed to read disk usage, rc:-3 qsd:lustre-OST0001 qtype:grp id:0 enforced:0 granted: 0 pending:0 waiting:0 req:0 usage: 0 qunit:0 qtune:0 edquot:0 default:no
      [ 1727.020437] BUG: unable to handle kernel NULL pointer dereference at 0000000000000025
      [ 1727.020499] IP: [<ffffffffc09ad434>] qsd_lqe_read+0x284/0x570 [lquota]
      [ 1727.020502] PGD 80000000366d3067 PUD 366a8067 PMD 0 
      [ 1727.020504] Oops: 0000 [#1] SMP 
      [ 1727.020556] Modules linked in: osp(OE) ofd(OE) lfsck(OE) ost(OE) mgc(OE) osd_ldiskfs(OE) ldiskfs(OE) lquota(OE) fid(OE) fld(OE) ksocklnd(OE) ptlrpc(OE) obdclass(OE) lnet(OE) libcfs(OE) crc_t10dif crct10dif_generic crct10dif_common dm_mod rpcsec_gss_krb5 nfsv4 dns_resolver nfs fscache ppdev parport_pc pcspkr parport joydev virtio_balloon i2c_piix4 nfsd auth_rpcgss nfs_acl lockd grace sunrpc ip_tables ext4 mbcache jbd2 ata_generic pata_acpi cirrus drm_kms_helper syscopyarea sysfillrect sysimgblt fb_sys_fops ttm virtio_net virtio_blk drm ata_piix libata serio_raw virtio_pci virtio_ring virtio i2c_core floppy
      [ 1727.020584] CPU: 0 PID: 10612 Comm: ll_ost00_000 Tainted: G           OE  ------------   3.10.0-693.21.1.x3.2.146.x86_64 #1
      [ 1727.020585] Hardware name: Red Hat KVM, BIOS 0.5.1 01/01/2011
      [ 1727.020587] task: ffff8800354a9fa0 ti: ffff8800a64b0000 task.ti: ffff8800a64b0000
      [ 1727.020604] RIP: 0010:[<ffffffffc09ad434>]  [<ffffffffc09ad434>] qsd_lqe_read+0x284/0x570 [lquota]
      [ 1727.020606] RSP: 0018:ffff8800a64b3980  EFLAGS: 00010282
      [ 1727.020607] RAX: fffffffffffffffd RBX: ffff88009d340000 RCX: 0000000000000008
      [ 1727.020608] RDX: 0000000000000007 RSI: ffff88009d3401a0 RDI: ffff880134cfdb00
      [ 1727.020609] RBP: ffff8800a64b39d8 R08: 00000000000222a0 R09: fffffffffffffffd
      [ 1727.020610] R10: ffff88013fc222a0 R11: ffffea000274d000 R12: ffff88003559f000
      [ 1727.020611] R13: ffff880135314100 R14: 0000000000000000 R15: ffff8800a320e800
      [ 1727.020613] FS:  0000000000000000(0000) GS:ffff88013fc00000(0000) knlGS:0000000000000000
      [ 1727.020614] CS:  0010 DS: 0000 ES: 0000 CR0: 000000008005003b
      [ 1727.020615] CR2: 0000000000000025 CR3: 000000003672a000 CR4: 00000000000006f0
      [ 1727.020625] DR0: 0000000000000000 DR1: 0000000000000000 DR2: 0000000000000000
      [ 1727.020633] DR3: 0000000000000000 DR6: 00000000ffff0ff0 DR7: 0000000000000400
      [ 1727.020633] Call Trace:
      [ 1727.020641]  [<ffffffffc09a7d1f>] lqe_locate+0x23f/0x840 [lquota]
      [ 1727.020654]  [<ffffffffc09ba447>] qsd_op_begin0+0xc7/0x930 [lquota]
      [ 1727.020702]  [<ffffffff81332792>] ? put_dec+0x72/0x90
      [ 1727.020708]  [<ffffffffc09baf09>] qsd_op_begin+0x259/0x4d0 [lquota]
      [ 1727.020770]  [<ffffffffc0b4c1c8>] osd_declare_qid+0x1d8/0x480 [osd_ldiskfs]
      [ 1727.020777]  [<ffffffffc0b152bc>] osd_declare_attr_qid+0x26c/0x350 [osd_ldiskfs]
      [ 1727.020783]  [<ffffffffc0b15779>] osd_declare_attr_set+0x3d9/0x590 [osd_ldiskfs]
      [ 1727.020977]  [<ffffffffc0c58d42>] ofd_attr_set+0x442/0xb50 [ofd]
      [ 1727.020984]  [<ffffffffc0c47d5d>] ofd_setattr_hdl+0x31d/0x8f0 [ofd]
      [ 1727.021705]  [<ffffffffc082b12a>] tgt_request_handle+0xaea/0x1580 [ptlrpc]
      [ 1727.021783]  [<ffffffffc045fe67>] ? libcfs_debug_msg+0x57/0x80 [libcfs]
      [ 1727.021817]  [<ffffffffc07d1c9b>] ptlrpc_server_handle_request+0x24b/0xab0 [ptlrpc]
      [ 1727.021849]  [<ffffffffc07d5594>] ptlrpc_main+0xaf4/0x1fa0 [ptlrpc]
      [ 1727.021877]  [<ffffffffc07d4aa0>] ? ptlrpc_register_service+0xf70/0xf70 [ptlrpc]
      [ 1727.021912]  [<ffffffff810b4031>] kthread+0xd1/0xe0
      [ 1727.021914]  [<ffffffff810b3f60>] ? insert_kthread_work+0x40/0x40
      [ 1727.021942]  [<ffffffff816c3577>] ret_from_fork+0x77/0xb0
      [ 1727.021944]  [<ffffffff810b3f60>] ? insert_kthread_work+0x40/0x40
      [ 1727.021962] Code: 23 02 00 00 f6 05 c7 6b ad ff 04 c7 05 fa bc 02 00 00 00 00 04 0f 85 24 02 00 00 80 8b c8 00 00 00 01 4d 85 c9 0f 84 cc fe ff ff <41> 8b 41 28 85 c0 0f 8e a7 02 00 00 f0 41 ff 49 28 0f 94 c0 84 
      [ 1727.021968] RIP  [<ffffffffc09ad434>] qsd_lqe_read+0x284/0x570 [lquota]
      

            wc-triage WC Triage
            egryaznova Elena Gryaznova
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: