LU-11585 quota: no IS_ERR() check in qsd_lqe_read

qsd_lqe_read() should check lqe_locate() return value with
IS_ERR() instead of != NULL.

Cray-bug-id: LUS-6636
Signed-off-by: Alexander Zarochentsev <c17826@cray.com>
Change-Id: I930a16a789ece6ca52ca82ce69626d6678472c9a
Signed-off-by: Alexander Zarochentsev <c17826@cray.com>
Reviewed-on: https://review.whamcloud.com/34522
Reviewed-by: Alex Zhuravlev <bzzz@whamcloud.com>
Tested-by: Jenkins
Reviewed-by: Patrick Farrell <pfarrell@whamcloud.com>
Reviewed-by: Andreas Dilger <adilger@whamcloud.com>
Tested-by: Maloo <maloo@whamcloud.com>